Mobile: Work Experience

--- a/src/modules/content/components/technologies/technologies.component.html
+++ b/src/modules/content/components/technologies/technologies.component.html
@@ -9,13 +9,12 @@
     </ul>
   </li>
   <li>
-    JavaScript
+    JavaScript & TypeScript
     <ul>
       <li>ES5</li>
       <li>ES6</li>
     </ul>
   </li>
-  <li>TypeScript</li>
   <li>
     JS Frameworks:
     <ul>
@@ -38,7 +37,6 @@
     <ul>
       <li>NodeJS</li>
       <li>MongoDB</li>
-      <li>PHP</li>
     </ul>
   </li>
   <li>
@@ -61,7 +59,7 @@
   <li>
     Package Management:
     <ul>
-      <li>Node Package Manager (Npm)</li>
+      <li>NPM / Yarn</li>
       <li>Gulp.js</li>
       <li>Bower</li>
       <li>Grunt</li>
@@ -94,6 +92,8 @@
           <li>Sulu (headless CMS)</li>
         </ul>
       </li>
+      <li>PHP</li>
+      <li>.NET</li>
       <li>SPA</li>
       <li>PWA</li>
       <li>Cross Platform Apps</li>
