--- a/src/modules/ui-timeline/components/timeline-item/timeline-item.component.scss
+++ b/src/modules/ui-timeline/components/timeline-item/timeline-item.component.scss
@@ -18,11 +18,11 @@
     text-align: center;
     margin-bottom: $space-phone;
     color: #fff;
-    font-weight: 500;
     background-color: $color-secondary;
     padding: $space-phone / 2 0;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+    font-size: 1.1rem;
   }
 
   .content {
@@ -36,7 +36,7 @@
 
   h3 {
     padding: 0;
-    margin: 0 0 28px 0;
+    margin: 0 0 12px 0;
     font-size: 1rem;
     color: #878787;
     text-align: center;
@@ -44,6 +44,8 @@
 
   p.technologies {
     text-align: center;
+    font-size: .8rem;
+    font-weight: 500;
   }
 
 
