--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -77,8 +77,17 @@ ul {
   }
 }
 
+// ROOT VARIABLES
+:root {
+  --space: 12px;
+}
+
 @include breakpoint('tablet') {
   * {
     font-size: 16px;
+  }
+
+  :root {
+    --space: 16px;
   }
 }
